css/main.css
html, body {
	margin: 0;
	padding: 0;
}

.container {
	width: 90%;
	margin-left: auto;
	margin-right: auto;
}

h3{
	text-align: center;
}

.map-div {
	min-height: 400px;
	width: 100%;
}

.head {
	display: flex;
	list-style: none;
	width: 100%;
	/*margin-left: 0;
	margin-right: 0;*/
	margin-left: auto;
	margin-right: auto;
}

#selected-list li {
	width: 22%;
	box-sizing: border-box;
	border-radius: 10px;
	border-style: groove;
	border-color: grey;
	background-color: #99FFCC;
	text-align: center;
	line-height: 20px;
	padding: 10px 2px 10px 2px;
}

#selected-list li a {
	font-weight: 700;
	color: black;
	text-decoration: none;

}
#selected-list li a:hover, a:active {
	color: red;
}

.nav{
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	display: flex;
}

.nav span {
	padding: 15px ;
	font-size: 28px;
	font-weight: bold;
}

.nav-menu {
	display: none;
}

/*
.nav-header {
	font-weight: 700;
	color: black;
	text-align: center;
	font-size: 28px;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
}
*/
@media screen and (max-width: 500px)  {

	.nav-div {
		width: 100%;
		margin-right: auto;
		margin-left: auto;
	}

	.nav-menu {
		content: url("../images/hamburger_menu_sm.png");
		position: relative;
		display: block;
	}

	.nav span {
		position: relative;
		float: left;
		text-align: left;
	}

	.head {
		display:block;
		z-index: 10;
		width: 180px;
		background-color: #fff;
		position: absolute;
		margin-top: 0;
		-webkit-transform: translate(-500px,0);
		transform: translate(-500px, 0);
		transition: transform 0.3s ease;
	}

	.head.open {
		-webkit-transform: translate(-50px,0);
		transform: translate(-50px, 0);
	}

	#selected-list li {
		width: 100%;
		display: list-item;
		text-align: left;
		border-bottom: 1px solid #E0E0E0;
		border-color: #E0E0E0;
		border-radius: 1px;
	}

	.plusminus {
		font-size: 16px;
	}

/*
	.nav-menu {
		position: relative;
		display: block;
		text-decoration: none;
		text-align: center;
		line-height: 20px;
		padding: 10px 2px 10px 2px;
		background-color: #99FFCC;
		border: solid 1px #1e2a36;
		border-radius: 2px;
		font-weight: bold;
		color: black;
	}

	.nav-menu:after {
		//unicode for downward pointing arrow
		content: "\25BC";
		font-size: 0.5em;
		display: block;
		top: 30%;
		right:12%;
		text-align: right;
		position:absolute;
	}


	.head {
		display:none;
		position: relative;
		margin-top: 0;
		padding-left: 0;
	}

	.nav-div:hover > .head {
		display: block;
	}


	#selected-list li{
		width: 100%;
		position: relative;
		border-bottom: 1px solid rgba(255,255,255,.2);
		text-align: center;
		background-color: #99FFCC;
		list-style: none;
		padding: 10px 0 10px 0;
		border-radius: 2px;
		border-width: 1px;
	}
*/
}

/*with KO, selector input[type="text"] does not work!*/
.search-box {
	min-width: 180px;
	padding: 5px;
	outline: none;
	border: 2px solid #999999;
	border-radius: 5px;
	background-color: #FB#FB#FB;
	font-size: 16px;
	background-image: url("../images/search.png");
	background-position: 110% 2%;
	background-repeat: no-repeat;
	margin-left: 5px;
}

.btn-noshow {
	display: none;
}

.dialogBox {
	font: 30px;
}

.dialogBox span {
	color: red;
}

.detail-header {
	color: red;
	font-weight: bold;
}

.detail-body {
	font-style: italic;
}

.plusminus {
	font-weight: bold;
	min-width: 48px;
	text-decoration: none;
	padding-left: 5px;
	font-size: 28px;
}

.hidden {
	display: none;
}

.loc-list {
	display: none;
}

.map-err-details {
	display: none;
}

